--- a/src/404.pug
+++ b/src/404.pug
@@ -12,10 +12,10 @@ html(lang="ru")
     body
         include chunks/header.pug
         main
-            section.bg-gradient.error
+            section.bg-gradient.error-page
                 .container.text-center
-                    h1.error__title Ошибка 404
-                    p.error__offer страница не найдена или не существует
+                    h1.error-page__title Ошибка 404
+                    p.error-page__offer страница не найдена или не существует
                     .line
                     p.text-small Воспользуйтесь поиском или 
                         a.text-bold.link-white(href="/") вернитесь на главную страницу
