--- a/src/chunks/footer.pug
+++ b/src/chunks/footer.pug
@@ -24,7 +24,7 @@ footer.footer
 .footer-info
     .container
         .row
-            .col-6
+            .col-6.col-sm-12.text-sm-center
                 p.mb-0.text-small © 2019. Все права защищены
-            .col-6.text-right
+            .col-6.col-sm-12.text-sm-center.text-right
                 a.text-small.footer-info__link(href="/") Сайт разработан студией «SOHO»
