--- a/src/css/section/_content.scss
+++ b/src/css/section/_content.scss
@@ -38,14 +38,14 @@
     }
 }
 // For 404 Page
-.error{
+.error-page{
     padding: 90px 0;
-    .error__title{
+    .error-page__title{
         font-weight: bold;
         font-size: 72px;
         line-height: 74px;
     }
-    .error__offer{
+    .error-page__offer{
         font-size: 18px;
         line-height: 25px;
     }
