--- a/src/index.pug
+++ b/src/index.pug
@@ -19,7 +19,7 @@ html(lang="ru")
                         | любой сложности
                     p.header-block__offer Более 50 компаний выбрали ИНКАМ за неоспоримые преимущества:
                     .row
-                        .col-9
+                        .col-9.col-md-12
                             .advantage
                                 .advantage__item Решения под потребности заказчика
                                 .advantage__item Техническая поддержка 24/7 проекта
@@ -30,9 +30,9 @@ html(lang="ru")
             section.block-partners
                 .container
                     .row.align-items-center
-                        .col-3
+                        .col-3.col-sm-12.mb-sm-20.col-md-5.col-lg-4
                             p.heading Нам доверяют:
-                        .col-9
+                        .col-9.col-sm-12.col-md-7.col-lg-8
                             .slider.slider_logo
                                 .slider__item
                                     img.img-fluid(src="../img/RT_full_logo.png")
@@ -45,38 +45,38 @@ html(lang="ru")
             section.block-service
                 .container
                     .row.no-gutters
-                        .col-4
-                            p.h2 Компетенции компании
-                        .col-4.d-flex
-                            .service.service_modal-btn
+                        .col-4.col-sm-12.col-md-12
+                            p.block-service__title.h2.mb-md-40 Компетенции компании
+                        .col-4.col-sm-12.col-md-6.d-flex
+                            .service.service_modal-btn.service_first-child
                                 .service__title Сетевая инфраструктура
-                        .col-4.d-flex
+                        .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide
                                 .service__title Унифицированные коммуникации
-                        .col-4.d-flex
+                        .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn
                                 .service__title IT-решения
-                        .col-4.d-flex
+                        .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Комплексные системы мониторинга и&nbsp;анализа
-                        .col-4.d-flex
+                        .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Проектирование и модернизация 
                                     span.text-nowrap IT-инфраструктуры
-                        .col-4.d-flex
+                        .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bt-hide
                                 .service__title Управление комплексными проектами
-                        .col-4.d-flex
+                        .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Сервисная поддержка
-                        .col-4.d-flex
+                        .col-4.col-sm-12.col-md-6.d-flex
                             .service.service_modal-btn.service_bl-hide.service_bt-hide
                                 .service__title Проектирование и&nbsp;модернизация инженерной инфраструктуры ЦОД
                                 .service__content
             section.block-content
                 .container
                     .row.align-items-center
-                        .col-5
+                        .col-5.col-md-12.col-lg-9
                             p.subheading ИНКАМ СЕГОДНЯ
                             .subheading-line
                             p Компания Инкам  — ваш надежный поставщик высокотехнологичных и&nbsp;инновационных IT-решений для вашего бизнеса. 
@@ -85,72 +85,87 @@ html(lang="ru")
                             p За время работы мы внедрили более 100 технологических решений, спроектированных нашими инженерами 
                                 | персонального под&nbsp;нужды и&nbsp;задачи компании заказчика. В&nbsp;нашем активе проекты, 
                                 | реализованные как для&nbsp;российских, так и&nbsp;для&nbsp;международых компаний. 
-                        .col-7
+                        .col-7.col-md-12.mt-sm-20.col-lg-12
                             img.img-fluid(src="../img/maps-russia.svg")
             section.block-task
                 .container
                     .row
-                        .col-4
+                        .col-4.col-sm-12.col-md-12.col-lg-8.col-xl-5
                             p.h3.block-task__title Поставка оборудования для&nbsp;любых задач
                     .row.no-gutters
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_1
                                 .task__title Хранение данных
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_2
                                 .task__title Расходные материалы
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_3
                                 .task__title Периферийное оборудование
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_4
                                 .task__title Компьютеры
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_5
                                 .task__title Конференц-связь
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_6
                                 .task__title Сетевое оборудование
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_7
                                 .task__title Системы безопасности
-                        .col-3.d-flex
+                        .col-3.col-sm-12.col-md-6.d-flex
                             .task.task_8
                                 .task__title Торговое оборудование
             aside.news
                 .container
                     .row
-                        .col-4
+                        .col-4.col-sm-12.col-md-6
                             a.news-preview(href="/text.html")
                                 p.news-preview__title Внедрили новое решение в компанию  «Название компании»
                                 p.mb-0.news-preview__intro Lorem ipsum dolor sit amet. Accusamus et expedita distinctio deleniti atque. Qui in ea commodi autem. Sunt, explicabo et dolorum fuga cum soluta nobis.
-                        .col-4
+                        .col-4.col-sm-12.mt-sm-40.col-md-6
                             a.news-preview(href="/text.html")
                                 p.news-preview__title Внедрили новое решение в компанию  «Название компании»
                                 p.mb-0.news-preview__intro Lorem ipsum dolor sit amet. Accusamus et expedita distinctio deleniti atque. Qui in ea commodi autem. Sunt, explicabo et dolorum fuga cum soluta nobis.
-                        .col-4
+                        .col-4.col-sm-12.col-md-12.mt-md-40
                             a.news-preview(href="/text.html")
                                 p.news-preview__title Внедрили новое решение в компанию  «Название компании»
                                 p.mb-0.news-preview__intro Lorem ipsum dolor sit amet. Accusamus et expedita distinctio deleniti atque. Qui in ea commodi autem. Sunt, explicabo et dolorum fuga cum soluta nobis.
             section.block-contact
                 .container
                     .row.align-items-center
-                        .col-3
-                            p.text-uppercase.text-bold Адрес
-                            p г. Москва, улица Правды дом 24
-                            p.text-uppercase.text-bold КАК СВЯЗАТЬСЯ
-                            p.mb-0 Телефон: 
-                                a.link-inverse(href="tel:+7(495) 792-81-27") +7(495) 792-81-27
-                            p E-mail: 
-                                a.link-inverse(href="mailto:info@inkam.org.ru") info@inkam.org.ru
-                            p.text-uppercase.text-bold ВРЕМЯ РАБОТЫ
-                            p ПН-ПТ с 9.00 до 18.00
-                            p.mb-0.mt-40
-                                a.btn.btn_action(data-fancybox="modal" data-src="#modalCall" href="javascript:;") Остались вопросы?
-                        .col-9
+                        .col-3.col-sm-12.col-lg-12.col-xl-4
+                            .row
+                                .col-12.col-sm-12.col-lg-6
+                                    p.text-uppercase.text-bold Адрес
+                                    p г. Москва, улица Правды дом 24
+                                .col-12.col-sm-12.col-lg-6
+                                    p.text-uppercase.text-bold КАК СВЯЗАТЬСЯ
+                                    p.mb-0 Телефон: 
+                                        a.link-inverse(href="tel:+7(495) 792-81-27") +7(495) 792-81-27
+                                    p E-mail: 
+                                        a.link-inverse(href="mailto:info@inkam.org.ru") info@inkam.org.ru
+                                .col-12.col-sm-12.col-lg-6
+                                    p.text-uppercase.text-bold ВРЕМЯ РАБОТЫ
+                                    p ПН-ПТ с 9.00 до 18.00
+                                .col-12.col-sm-12.col-lg-6
+                                    p.mb-0.mt-40.mt-lg-20
+                                        a.btn.btn_action(data-fancybox="modal" data-src="#modalCall" href="javascript:;") Остались вопросы?
+                        .col-9.col-sm-12.mt-lg-40.col-lg-12.col-xl-8
                             .map
                                 <iframe src="https://yandex.ru/map-widget/v1/-/CGcyf0YI" width="100%" height="380" frameborder="0" allowfullscreen="false"></iframe>
         include chunks/footer.pug
+        .modal.modal_form#modalCall
+            .modal__content 
+                form.form(action="")
+                    input.input(type="text" placeholder="Ваше имя")
+                    input.input.phone(type="number" placeholder="Телефон")
+                    input.btn.btn_default.btn_full-width.text-bold(type="submit" value="Нужна консультация")
+                    .form__agree.checkbox
+                        input.checkbox__input#agree(type="checkbox" name="agree" checked="checked" required="required")
+                        label.checkbox__label(for="agree") согласен с 
+                            a.checkbox__link(href="/policy.pdf" target="_blank") обработкой персональных данных
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.inputmask.js")
         script(src="./js/slick.min.js")
