--- a/src/css/blocks/_task.scss
+++ b/src/css/blocks/_task.scss
@@ -31,3 +31,55 @@
         }
     }
 }
+@media all and (max-width: map-get($grid-breakpoints, 'md')){
+    .block-task{
+        padding: 40px 0;
+        .task{
+            &_2{
+                border-right: none;
+            }
+            &_5{
+                border-bottom: 1px solid $light-grey;
+            }
+            &_6{
+                border-bottom: 1px solid $light-grey;
+                border-right: none;
+            }
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
+    .block-task{
+        .task{
+            &_1{
+                border-right: none;
+            }
+            &_2{
+                border-right: none;
+            }
+            &_3{
+                border-right: none;
+            }
+            &_4{
+                border-bottom: none;
+            }
+            &_5{
+                border-top: 1px solid $light-grey;
+                border-right: none;
+                border-bottom: none;
+            }
+            &_6{
+                border-top: 1px solid $light-grey;
+                border-right: none;
+                border-bottom: none;
+            }
+            &_7{
+                border-top: 1px solid $light-grey;
+                border-right: none;
+            }
+            &_8{
+                border-top: 1px solid $light-grey;
+            }
+        }
+    }
+}
