--- a/src/css/item/_service.scss
+++ b/src/css/item/_service.scss
@@ -90,7 +90,7 @@
             z-index: 1;
             transition: .3s;
         }
-        &:hover, &:focus{
+        &:hover{
             .service__title{
                 color: $white;
             }
@@ -119,5 +119,32 @@
         flex-direction: row;
         align-items: center;
         padding: 70px 40px;
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'lg')){
+    .service{
+        &_modal-btn{
+            padding: 40px 20px;
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'md')){
+    .col-md-6{
+        .service{
+            border: 1px solid $light-grey;
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
+    .service{
+        &_modal-btn{
+            padding: 20px 40px;
+        }
+    }
+
+    .col-sm-12{
+        .service:not(.service_first-child){
+            border-top: none;
+        }
     }
 }
