--- a/src/css/other/_form.scss
+++ b/src/css/other/_form.scss
@@ -28,6 +28,10 @@
             color: darken($color: $grey, $amount: 10%);
         }
     }
+
+    .form__agree{
+        margin-top: 20px;
+    }
 }
 
 .input{
@@ -61,4 +65,105 @@
 
     background: url("../img/arrow-down.svg") no-repeat right center / 12px;
     background-position-x: calc(100% - 10px);
+}
+
+.checkbox{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+
+    font-size: 12px;
+
+    &__input{
+        display: none;
+
+        &:checked + .checkbox__label:after {
+            content: '';
+            display: block;
+            background-color: $blue;
+
+            width: 6px;
+            height: 6px;
+
+            position: absolute;
+            left: 4px;
+            top: 4px;
+        }
+    }
+    &__label{
+        position: relative;
+        margin: 0;
+        padding-left: 28px;
+        line-height: 12px;
+
+        cursor: pointer;
+
+        &:before{
+            content:'';
+            display: block;
+
+            // border: 1px solid $light-grey;
+            background: $light-grey;
+            width: 14px;
+            height: 14px;
+
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+    }
+    &__link{
+        text-decoration: underline;
+    }
+}
+
+.jGrowl {
+    font-family: "Noto Sans"
+}
+
+.jGrowl#jGrowl {
+    top: 50%;
+    left: 50%;
+    right: auto;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 99;
+
+    .jGrowl-notification {
+        width: 320px;
+        padding: 40px 20px;
+        border: 1px solid $light-grey;
+        border-radius: 0;
+
+        font-size: 14px;
+        color: $dark-blue;
+
+        .jGrowl-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 30px;
+            line-height: 30px;
+            width: 34px;
+            text-align: center;
+            border-radius: 0 0 0 15px;
+            color: #fff;
+            outline: 0
+        }
+
+        &.af-message-success {
+            background-color: #f9fcf7!important;
+            .jGrowl-close {
+                background: $blue;
+            }
+        }
+
+        &.af-message-error {
+            background-color: #fef8f8!important;
+            .jGrowl-close {
+                background: #df0a0a;
+            }
+        }
+    }
 }
